2013-10-25  Thomas Bleher <tbleher@gmx.de>

	* src/stdfn.c(gp_atexit gp_exit) src/stdfn.h src/command.c(exit_command)
	src/plot.c(main) src/qtterminal/qt_term.cpp src/win/winmain.c
	src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo_helpers.c
	src/wxterminal/wxt_gui.cpp term/be.trm term/x11.trm:

	Create gnuplot atexit handlers that are called before exit(3)
	
	Normal atexit-handlers are called in the reverse order of registration.
	This causes problems when a library has its own global destructors which
	do not handle the case that objects of the library may still be active
	and destroyed in the atexit handler. This has been observed with Qt.
	
	Introduce a new function gp_exit() which calls the gnuplot atexit handlers
	and then calls exit(3). Also create gp_atexit() to register gnuplot exit
	handlers.

	* src/getcolor.c (quantize_gray):  Windows compile error ("small" is not
	accepted as a variable name).

	* config/msvc/Makefile:  DEBUG option when compiling with MSVC

2013-10-25  Ethan A Merritt  <merritt@u.washington.edu>

	* src/corgraph.asm  src/hrcgraph.asm  src/pcgraph.asm src/corplot.c:
	Remove vestigial files from the era of 16-bit DOS.	

	* configure.in term/unixpc.trm src/term.c src/term.h src/syscfg.h
	src/makefile.all src/makefile.awc config/makefile.* docs/doc2texi.el:
	Remove vestigial driver and makefile entries for the AT&T 3b1 "unix pc".
	Early M6800-based tiny (256Kb) machine.

2013-10-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot.c (main):  If commands are being executed interactively
	because the user said something like "gnuplot -", then execution should
	continue after an error message just as in a normal interactive session.
	Bug #1295

	* src/mouse.c (event_reset) src/term.c (check_for_mouse_events):  
	Must not send commands to the terminal if it has not yet been
	initialized.

	* term/gd.trm src/wxterminal/gp_cairo.c:
	Inboard terminal drivers should not write errors to stdout and normally